# lrxmms2

./: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac  github
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  lrxmms2
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  main.c  main.c~  mainWindow.c  mainWindow.c~  mainWindow.h  mainWindow.h~  playback.c  playback.c~  playback.h  playback.h~  playlist.c  playlist.c~  playlist.h  playlist.h~  playlist_gtk_model.c  playlist_gtk_model.c~  playlist_gtk_model.h  playlist_gtk_model.h~  song.h~  status.c  status.c~  track.h~  xmms2.c  xmms2.c~  xmms2.h  xmms2.h~
src/entities/: Makefile.am  Makefile.in  playlist.h  playlist.h~  track.h  track.h~
